<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <Button
                android:id="@+id/btnStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/status" />

            <Button
                android:id="@+id/btnPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/photo" />

            <Button
                android:id="@+id/btnGeoTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".33"
                android:text="@string/geotag" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <LinearLayout
                android:id="@+id/linearLayoutTempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/gray"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivProfilePicture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textColor="@drawable/black" />

                <LinearLayout
                    android:id="@+id/linearLayoutTemp522"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/ivRegistationMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ic_launcher" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ageprofile"
                android:textColor="@drawable/black" />

            <TextView
                android:id="@+id/tvAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Age"
                android:textColor="@drawable/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/livesin"
                android:textColor="@drawable/black" />

            <TextView
                android:id="@+id/tvLivesIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lives In"
                android:textColor="@drawable/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textColor="@drawable/black" />

            <TextView
                android:id="@+id/tvWork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Work"
                android:textColor="@drawable/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" >

            <TextView
                android:id="@+id/tvMoreInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moreinfo"
                android:textColor="@drawable/black" />
        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/btnPhotos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photos" />

                <Button
                    android:id="@+id/btnMessages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages" />

                <Button
                    android:id="@+id/btnFriends"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friends" />

                <Button
                    android:id="@+id/btnEvents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/events" />

                <Button
                    android:id="@+id/btnBreadcrumbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breadcrumbs" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

</ScrollView>