<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/vertLL1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:paddingRight="20dp"
            android:text="@string/changePasswordTitle"
            android:textColor="@drawable/black"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/oldPasswordLabel"
            android:textColor="@drawable/black"
            android:gravity="right"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/etOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/newPasswordLabel"
            android:textColor="@drawable/black"
            android:gravity="right"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/etNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/confirmPasswordLabel"
            android:textColor="@drawable/black"
            android:gravity="right"
            android:layout_marginRight="5dp" />

        <EditText
            android:id="@+id/etConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"           
            android:inputType="textPassword" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/saveButtonLabel"
        android:layout_marginTop="10dp" />

</LinearLayout>