<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/header"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="45dp"
            android:layout_height="23dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_back"
            android:scaleType="fitXY" />

        <ImageView
            android:layout_width="135dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/logo_banner" />

        <Button
            android:id="@+id/btnNotification"
            android:layout_width="30dp"
            android:layout_height="31dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/selector_icon_notification"
            android:text="0"
            android:textSize="10dip"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:paddingBottom="12dip"
            android:paddingRight="2dip" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:background="@drawable/img_settings_header_bg"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:paddingLeft="15dip" >

        <ImageView
            android:layout_width="22dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/icon_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="7dp"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:scrollbars="none"
         >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            
            <Button
                android:id="@+id/btnAccountSettings"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/accountSettings" />

            
            <Button
                android:id="@+id/btnInformationSharing"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/informationSharing" />

            
            <Button
                android:id="@+id/btnLocationSharing"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/locationSharing"
                android:visibility="visible" />

            
            <Button
                android:id="@+id/btnNotifications"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/notifications" />
            
            <Button
                android:id="@+id/btnPlatforms"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/platforms" />

            <Button
                android:id="@+id/btnLayers"
                android:layout_width="fill_parent"
                android:layout_height="50dip"
                style="@style/ListButtonWithIcon"
                android:text="@string/layers" />
            <View 
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:background="@color/gray_light"
                />

                
        </LinearLayout>
    </ScrollView>

</LinearLayout>