<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EFF3EF"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:visibility="gone" >
        
    
    	<Button
            android:id="@+id/btnClearSearch"
            android:layout_width="55dip"
            android:layout_height="32dip"
            android:layout_alignParentRight="true" 
            android:layout_alignParentTop="true"     
            android:text="@string/clearLabel"
            android:textSize="12dip"
            android:textColor="@color/white"
            android:background="@drawable/selector_btn_green" />

        <Button
            android:id="@+id/btnDoSearch"
            android:layout_width="55dip"
            android:layout_height="32dip"
			android:layout_toLeftOf="@+id/btnClearSearch"
			android:layout_alignParentTop="true"
            android:layout_marginRight="5dip"
            android:text="@string/okLabel"
            android:background="@drawable/selector_btn_green"
            android:textSize="12dip"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/etSearchField"
            android:layout_width="fill_parent"
            android:layout_height="38dip"
            android:layout_marginRight="5dip"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btnDoSearch"
            android:hint="@string/hint_search_home"
            android:textSize="12dip" />

    </RelativeLayout>