<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#EFF3EF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|left"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dip"
            android:text="@string/menuItemShowOnList"
            android:textColor="@color/gray_dark"
            android:textSize="12dp" />

        <CheckBox
            android:id="@+id/chkMenuItemPeople"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:checked="true"
            android:text="@string/menuItemPeopleLabel"
            android:textColor="@color/gray_dark"
            android:textSize="12dp" />

        <CheckBox
            android:id="@+id/chkMenuItemPlaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:checked="true"
            android:text="@string/menuItemPlacesLabel"
            android:textColor="@color/gray_dark"
            android:textSize="12dp" />

        <CheckBox
            android:id="@+id/chkMenuItemDeals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dip"
            android:checked="true"
            android:text="@string/menuItemDealsLabel"
            android:textColor="@color/gray_dark"
            android:textSize="12dp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="left|center_vertical"
        android:orientation="horizontal"
        android:visibility="visible" >

        <LinearLayout
            android:id="@+id/allUserFriendsOnlyRadioGroupContainer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/onlineOfflineRadioGroupContainer"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </LinearLayout>
    </LinearLayout>

</LinearLayout>